--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "PREFIX": "/",
     "dakogOten": "admin123456",
     "PORT": 10000,
-    "WEBVIEW": "http://chico-ai.onrender.com/",
+    "WEBVIEW": "https://chico-bot-ai.onrender.com/",
     "RESTART_TIME": 30,
     "admin": ["100013036275290","61557924257806"]
 }
