--- a/fb_state/appstate.json
+++ b/fb_state/appstate.json
@@ -1,137 +1,56 @@
 [
-    {
-        "key": "dbln",
-        "value": "%7B%2261561198085403%22%3A%22ETr2lqLx%22%2C%2261561365967314%22%3A%22jG7p5cPe%22%2C%2261558479925758%22%3A%22g7zRG1hB%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.249Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "sb",
-        "value": "O3p3Zo15IsF2EQ3_DjKvWf-6",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "datr",
-        "value": "5YJ3ZkHHCIWzkPLtqdDHu3pW",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B668x360x2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "zsh",
-        "value": "ASSVMc3eSqZ8Ftyw5H5J-UJsBmZIKft4RF-AS2sE3ZIFf4holxEMIUlycogXUDbnGA67_oN-1bLiqe1JzttJKZMxRWU7Lv449m0v4CFtiDgvTzAE7nfLemWKh4ufb1-qblxrWZaTeDq6Cj8OglaJKiFBVkBWb-qsewCOF-A5CzZqOWzRpyjo6kB8f2bAdax3UMx7AyKDX-TuayBcX7KBwifQ4dcTcktFneq57tdR_ObtrvGJyuRWv5DSJJbIgecs12a1Jj_7ZpoE5Y2wzOL99g-81IPrRpneEbUUbH9QDjlaJADYFhQqXDppgm_9f4F7",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x668",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "fr",
-        "value": "02S8XjM8SoyX7pMoy.AWWqQHCGqKyoS4ozCp9pxyTujrE.Bmd4Ll..AAA.0.0.BmfU-v.AWVZQ0NIC5A",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61558479925758",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "xs",
-        "value": "43%3AtKq9YvOwoFCN7A%3A2%3A1719488431%3A-1%3A7299",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "m_page_voice",
-        "value": "61558479925758",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101326444%3BT%3A28658140",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2542%3Btimestamp%3A1719488455",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-27T11:40:19.250Z",
-        "lastAccessed": "2024-06-27T11:40:19.250Z"
-    }
+  {
+    "key": "datr",
+    "value": "rP59ZtWP4Llma6tuGDDYPfNs",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-28T00:07:11.314Z",
+    "lastAccessed": "2024-06-28T00:07:11.314Z"
+  },
+  {
+    "key": "sb",
+    "value": "rP59ZuvJ7iT-OyjpLJP_fynq",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-28T00:07:11.314Z",
+    "lastAccessed": "2024-06-28T00:07:11.314Z"
+  },
+  {
+    "key": "c_user",
+    "value": "61561255663328",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-28T00:07:11.314Z",
+    "lastAccessed": "2024-06-28T00:07:11.314Z"
+  },
+  {
+    "key": "xs",
+    "value": "12%3AtUL6DuSeCgokow%3A2%3A1719533229%3A-1%3A-1",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-28T00:07:11.314Z",
+    "lastAccessed": "2024-06-28T00:07:11.314Z"
+  },
+  {
+    "key": "fr",
+    "value": "0S6wpUt77sHAvWlLI.AWUzVjD6pkAVfcIXnXsEh6PMSzw.Bmff6s..AAA.0.0.Bmff6s.AWULAhrvZmM",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-28T00:07:11.314Z",
+    "lastAccessed": "2024-06-28T00:07:11.314Z"
+  },
+  {
+    "key": "m_page_voice",
+    "value": "61561255663328",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-28T00:07:11.314Z",
+    "lastAccessed": "2024-06-28T00:07:11.314Z"
+  }
 ]
