--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "PREFIX": "-",
+    "PREFIX": "/",
     "dakogOten": "admin123456",
     "PORT": 10000,
     "WEBVIEW": "https://june-raid-ai.onrender.com/",
-    "RESTART_TIME": 30,
+    "RESTART_TIME": 60,
     "admin": ["100013036275290","61557924257806"]
 }
